Started training api
