# src/main/openapi/tracker.yaml
@@ -108,6 +108,86 @@ paths:
           description: OK
 
 
+  /api/trainings:
+    get:
+      tags:
+        - Training
+      summary: Returns a list of all trainings
+      operationId: getTrainings
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Training'
+    put:
+      tags:
+        - Training
+      summary: Creates a new training
+      operationId: createTraining
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Training'
+      responses:
+        200:
+          description: OK
+
+  /api/trainings/{date}:
+    get:
+      tags:
+        - Training
+      summary: Returns a training by ID
+      operationId: getTraining
+      parameters:
+        - in: path
+          name: date
+          required: true
+          schema:
+            type: string
+            format: date
+          description: training date
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Training'
+    post:
+      tags:
+        - Training
+      summary: Updates a training by ID
+      operationId: updateTraining
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Training'
+      responses:
+        200:
+          description: OK
+    delete:
+      tags:
+        - Training
+      summary: Deletes a training by ID
+      operationId: deleteTraining
+      parameters:
+        - in: path
+          name: date
+          required: true
+          schema:
+            type: string
+            format: date
+          description: training date
+      responses:
+        200:
+          description: OK
+
 components:
   schemas:
     UserData:
@@ -138,3 +218,23 @@ components:
               type: integer
               format: int64
               readOnly: true
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+          maxLength: 20
+    Training:
+      properties:
+        id:
+          type: string
+          format: date
+        type:
+          type: string
+          enum: [klein, groß, spezial]
+        participants:
+          type: array
+          items:
+            type: integer
+            format: int64
